<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/verde_app" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aree_verdi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_aree_verdi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mia_aria"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_mia_aria"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passeggiata"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_passeggiata"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bianco" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_cerca"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/bianco" />

    </LinearLayout>

</ScrollView>